tests/errors/early_return_null_type_mismatch.dang
# Early return null must not satisfy a non-null declared return type
bad(): String! {
  return null
  "ok"
}
